--- a/day_1/pubspec.yaml
+++ b/day_1/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  provider: ^6.1.2
-  intl: ^0.19.0
+  google_fonts: ^6.2.1
+  bezier_chart_plus: ^0.0.1
+  font_awesome_flutter: ^10.7.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
